<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.bg.fhdw.bfwi413a.karthago.ConfigActivity" >

    <TextView
        android:id="@+id/textview_cardfile_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/text_textview_cardfile_selection"
        android:textColor="#296E87"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_cardfile1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textview_cardfile_selection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape_login"
        android:text="@string/cardfile1"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_cardfile2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile1"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile2" />

    <Button
        android:id="@+id/btn_cardfile3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile2"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile3" />

    <Button
        android:id="@+id/btn_cardfile4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile3"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile4" />

    <Button
        android:id="@+id/btn_cardfile5"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile4"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile5" />

    <Button
        android:id="@+id/btn_cardfile6"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile5"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile6" />

    <Button
        android:id="@+id/btn_cardfile7"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile6"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile7" />

    <Button
        android:id="@+id/btn_cardfile8"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_cardfile7"
        android:layout_centerHorizontal="true"
        android:text="@string/cardfile8" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:src="@drawable/logo_glasses2" />

</RelativeLayout>