<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/config"
            android:textColor="#296E87"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/config_text1"
            android:textColor="#296E87"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/spn_sort"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:spinnerMode="dropdown" />

      

        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spn_sort"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/config_text2"
            android:textColor="#296E87"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/spn_userlist_config"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="ADMIN" />

     

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spn_userlist_config"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/btn_changeUser"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/buttonshape_login"
                android:text="@string/changeUser"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_deleateUser"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/buttonshape_login"
                android:text="@string/deleateUser"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/info"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/spn_userlist_config"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/buttonshape_link"
            android:text="@string/info"
            android:textColor="#296E87"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:src="@drawable/logo_glasses2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66FFFFFF" >

        <TextView
            android:id="@+id/tvShoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#1a4351"
            android:gravity="center"
            android:padding="5dp"
            android:text="Das ist die Konfiguration. Hier kannst Du Benutzer erstellen, wechseln, löschen oder die Sortierreihenfolge der Karteikarten ändern."
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Tippe auf den Screen für &apos;Weiter&apos;"
            android:textColor="#1a4351"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>

</FrameLayout>